--- a/HMS_Django/hospital/templates/view_apt.html
+++ b/HMS_Django/hospital/templates/view_apt.html
@@ -29,8 +29,8 @@
                 <tbody>
                     {% for item in data %}
                     <tr>
-                        <td>{{ item.dname }}</td>
-                        <td>{{ item.pname }}</td>
+                        <td>{{ item.doctor }}</td>
+                        <td>{{ item.patient }}</td>
                         <td>{{ item.date }}</td>
                         <td>{{ item.time }}</td>
                         <td>
