--- a/HMS_Django/hospital/templates/add_doctor.html
+++ b/HMS_Django/hospital/templates/add_doctor.html
@@ -22,7 +22,7 @@
         <label>Specialization</label>
         <input type="text" class="form-control" name="specialization">
         <br>
-        <input type="submit" value="Add Patient" class="form-control btn btn-primary">
+        <input type="submit" value="Add Doctor" class="form-control btn btn-primary">
     </form>
 </div>
 </body>
